# LW_OC

./: README.md
CP/: CMakeLists.txt  mkc_allocator.h
CP/include/: simple_allocator.h
CP/src/: main.cpp  mkc_allocator.cpp  simple_allocator.cpp
CP/tests/: test_allocators.cpp  test_performance.cpp
LW2/: CMakeLists.txt  main.c  test.cpp
LW3/: CMakeLists.txt  child2.c  utils.h
LW4/: CMakeLists.txt
LW4/include/: primecount.h
LW4/src/: primecount_naive.c  primecount_sieve.c  program1.c  program2.c
LW4/tests/: primecount_tests.cpp
LW5-7/: CMakeLists.txt
LW5-7/include/: ControlNode.h  Node.h
LW5-7/src/: ContolNode.cpp  Node.cpp  main.cpp
LW5-7/tests/: test_main.cpp
LW_1/: CMakeLists.txt  child.c  parent.c  test_child.cpp
